--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "Juan Zúñiga",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
     "express-handlebars": "^7.1.2",
+    "express-validator": "^7.1.0",
+    "handlebars-layouts": "^3.1.4",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0"
   }
 }
